--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "react-router-dom": "^4.3.1",
     "semantic-ui-react": "^0.82.1"
   },
+  "scripts": {
+    "start": "webpack-dev-server"
+  },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
