--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "css-loader": "^1.0.0",
     "eslint": "^5.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "react-hot-loader": "^4.3.4",
     "style-loader": "^0.21.0",
     "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0",
