--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "dependencies": {
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
+    "react-delay-render": "^0.1.2",
     "react-dom": "^16.4.1",
+    "react-imported-component": "^4.6.2",
     "react-router-dom": "^4.3.1",
     "semantic-ui-react": "^0.82.1"
   },
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --hot"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
