--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "autoprefixer": "^9.1.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-delay-render": "^0.1.2",
@@ -13,7 +14,9 @@
     "semantic-ui-react": "^0.82.1"
   },
   "scripts": {
-    "start": "webpack-dev-server --hot"
+    "dev": "webpack-dev-server --hot --config webpack.config.development.js",
+    "prebuild": "rimraf dist",
+    "build": "cross-env NODE_ENV=production webpack -p --config webpack.config.production.js"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -21,10 +24,14 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
+    "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "eslint": "^5.2.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^2.1.6",
     "react-hot-loader": "^4.3.4",
+    "rimraf": "^2.6.2",
     "style-loader": "^0.21.0",
     "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0",
